kubernetes/apps/flux-system/operator/ks/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/instance: flux-operator
    app.kubernetes.io/name: flux-operator
  name: flux-operator
spec:
  hostnames:
    - flux.kantai.xyz
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-internal
      namespace: network
  rules:
    - backendRefs:
        - name: flux-operator
          port: 9080
